# checksum_check

./: .gitignore  LICENSE  README.md  clean-rebuild.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  update-version.js  vite.config.ts
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tauri.d.ts
src/components/: ChecksumDisplay.tsx  DropZone.tsx  HashtagIcon.tsx
