[package]
name = "checksum_check"
version = "1.2.0"
description = "SHA256 Checksum Checker"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "protocol-asset", 
    "fs-read-dir", 
    "dialog-all", 
    "fs-exists", 
    "fs-read-file", 
    "path-all", 
    "shell-open"
] }
sha2 = "0.10"
md5 = "0.7.0"
sha1 = "0.10.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
